[package]
name = "check-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11.20", features = ["blocking", "socks"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
